--- a/index.html
+++ b/index.html
@@ -9,31 +9,40 @@
 </head>
 <body>
     <div class="container">
+                <video class="video" controls autoplay>
+                    <source src="imagesvideos/video.mp4" />
+                </video>
         <header>
-        <h1>Skolan vid havet</h1>
-        <div class="topnav">
-            <a href="index.html">Startsida</a>
-            <a href="kurser.html">Kurser</a>
+            <div class="topnav">
+                <a href="index.html">Startsida</a>
+                <a href="kurser.html">Kurser</a>
+            </div>
+        </header>      
+        <div class="infoText">
+            <p>
+                <b> WestCoast Education </b> är ett utbildningsföretag som har sin placering på västkusten strax norr
+                om Göteborg. 
+                <br> 
+                Vi har varit i utbildningsbranschen i snart 40 år. 
+                <br> 
+                Vårt affärsmål är och har varit
+                att tillhandahålla tekniska utbildningar inom IT-området.
+                <br>
+                    <image id="computer" src="imagesvideos/pexels-photo-3568521.jpeg"/>
+                <br>
+                Vi har varit väldigt framgångsrika i alla år. 
+                <br>
+                Vi har specialiserat oss på framförallt
+                systemutvecklingsutbildningar inom webb och mobila lösningar.
+                Vårt koncept har och är fortfarande att tillhandahålla klassrumsutbildningar där elever och
+                lärare möts. Vi erbjuder även distansutbildning där elever kan närvara via länk till klassrum
+                där en lärare genomför lektionen.
+                <br>
+                <br>
+            </p>
+                <img id="cabin" src="red-g59a8ffb41_1920.jpg" />
         </div>
-        <img src="red-g59a8ffb41_1920.jpg"/>
-        </header>
     </div>
-    <div class="infoText">
-        <p>
-            WestCoast Education är ett utbildningsföretag som har sin placering på västkusten strax norr
-            om Göteborg. 
-            <br> 
-            Vi har varit i utbildningsbranschen i snart 40 år. Vårt affärsmål är och har varit
-            att tillhandahålla tekniska utbildningar inom IT-området.
-            <br>
-            Vi har varit väldigt framgångsrika i alla år. Vi har specialiserat oss på framförallt
-            systemutvecklingsutbildningar inom webb och mobila lösningar.
-            Vårt koncept har och är fortfarande att tillhandahålla klassrumsutbildningar där elever och
-            lärare möts. Vi erbjuder även distansutbildning där elever kan närvara via länk till klassrum
-            där en lärare genomför lektionen.
-
-        </p>
-        </div>
-    </div>
+    <div class="footer">All rights reserved West Coast Education.</div>
 </body>
 </html>
