--- a/kurser.html
+++ b/kurser.html
@@ -16,7 +16,7 @@
                 <a href="index.html">Startsida</a>
                 <a href="kurser.html">Kurser</a>
             </div>
-
+            <img id="cabin" src="red-g59a8ffb41_1920.jpg" />
         </header>
     </div>
     <div>
