--- a/kurser.html
+++ b/kurser.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="kurser.css">
-    <title>WestCoast</title>
+    <title>WestCoast - Courses</title>
 </head>
 <body>
     <div class="container">
@@ -18,9 +17,63 @@
             </div>
             <img id="cabin" src="red-g59a8ffb41_1920.jpg" />
         </header>
+        <div class="courses">
+            <button> Internetkunskap. Start: VT-23, 15HP </button>
+                <ul>
+                    <ul> 
+                        <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
+                    </ul>
+                </ul>
+            <button> Alla programmeringsspråk. Start: HT-22. 60HP. </button>
+            <ul>
+                <ul>
+                    <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis
+                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
+                </ul>
+            </ul>
+            <button> AI - Prata med robotar. Start: HT-22. 15HP.</button>
+            <ul>
+                <ul>
+                    <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis
+                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
+                </ul>
+            </ul>
+            <button> Cloud - Mer än fluffiga moln. Start: VT-23. 30HP. </button>
+            <ul>
+                <ul>
+                    <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis
+                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
+                </ul>
+            </ul>
+            <button> Office 365, grundkurs. Start: VT-23, 7HP </button>
+            <ul>
+                <ul>
+                    <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis
+                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
+                </ul>
+            </ul>
+        </div>
+        <div class="footer">All rights reserved West Coast Education.</div>
     </div>
-    <div>
-
-    </div>
+    
 </body>
 </html>
