--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
                     <source src="imagesvideos/video.mp4" />
                 </video>
         <header>
-            <div class="topnav">
-                <a href="index.html">Startsida</a>
-                <a href="kurser.html">Kurser</a>
+            <div class="flex-nav">
+                <div class="topnav">
+                    <a href="index.html">Startsida</a>
+                    <a href="kurser.html">Kurser</a>
+                    <a href="#">Eleverna berättar</a>
+                    <a href="#">Rektorn har ordet</a>
+                    <a href="#">Galleri</a>
+                </div>
             </div>
         </header>      
         <div class="infoText">
+            <h1>WestCoast Education </h1>
             <p>
                 <b> WestCoast Education </b> är ett utbildningsföretag som har sin placering på västkusten strax norr
                 om Göteborg. 
