--- a/kurser.html
+++ b/kurser.html
@@ -10,14 +10,58 @@
 <body>
     <div class="container">
         <header>
-            <h1>Valbara kurser</h1>
-            <div class="topnav">
-                <a href="index.html">Startsida</a>
-                <a href="kurser.html">Kurser</a>
+            <div class="flex-nav">
+                <div class="topnav">
+                    <a href="index.html">Startsida</a>
+                    <a href="kurser.html">Kurser</a>
+                    <a href="#">Eleverna berättar</a>
+                    <a href="#">Rektorn har ordet</a>
+                    <a href="#">Galleri</a>
+                </div>
             </div>
             <img id="cabin" src="red-g59a8ffb41_1920.jpg" />
         </header>
+        <div class="rubrik">
+            Valbara kurser. 
+            <br>
+            Nedan ser du de kurser som går att läsa på vår skola. 
+            <br>
+            Klicka gärna in dig på någon utbildning eller kurs för att läsa mer om den. 
+        </div>
         <div class="courses">
+            <div class="grid-item" id="Internetkunskap">Internetkunskap.
+                <img src="imagesvideos/pexels-pixabay-147413.jpg"/>
+                Start: VT-23.
+                <br>
+                15HP
+            </div>
+            <div class="grid-item" id="ProgSpråk">Alla programmeringsspråk. 
+                <img src="imagesvideos/pexels-markus-spiske-2004161.jpg"> 
+                Start: HT-22. 
+                <br>
+                60HP. </div>
+            <div class="grid-item" id="AI">AI - <br> Prata med robotar. 
+                <img src="imagesvideos/pexels-alex-knight-2599244.jpg">
+                Start: HT-22. 
+                <br>
+                15HP. </div>
+            <div class="grid-item" id="Cloud">Cloud - <br> Mer än fluffiga moln. 
+                <img src="imagesvideos/pexels-brett-sayles-2100921.jpg">
+                Start: VT-23. 
+                <br>
+                30HP. </div>
+            <div class="grid-item" id="OfficePaketet">Office 365, grundkurs. 
+                <img src="imagesvideos/pexels-photo-574069.jpeg">
+                Start: VT-23,
+                <br>
+                 7HP </div>
+            <div class="grid-item" id="Paint">Paint - <br> Din bästa vän. 
+                <img src="imagesvideos/pexels-deeana-arts-1576210.jpg">
+                Start: HT-22. 
+                <br>
+                7HP </div>
+        </div>
+            <!--
             <button> Internetkunskap. Start: VT-23, 15HP </button>
                 <ul>
                     <ul> 
@@ -71,6 +115,7 @@
                         occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
                 </ul>
             </ul>
+        -->
         </div>
         <div class="footer">All rights reserved West Coast Education.</div>
     </div>
