--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <a href="#">Eleverna berättar</a>
                     <a href="#">Rektorn har ordet</a>
                     <a href="#">Galleri</a>
+                    <a href="#">Logga in</a>
                 </div>
             </div>
         </header>      
