--- a/kurser.html
+++ b/kurser.html
@@ -17,6 +17,7 @@
                     <a href="#">Eleverna berättar</a>
                     <a href="#">Rektorn har ordet</a>
                     <a href="#">Galleri</a>
+                    <a href="#">Logga in</a>
                 </div>
             </div>
             <img id="cabin" src="red-g59a8ffb41_1920.jpg" />
@@ -29,13 +30,13 @@
             Klicka gärna in dig på någon utbildning eller kurs för att läsa mer om den. 
         </div>
         <div class="courses">
-            <div class="grid-item" id="Internetkunskap">Internetkunskap.
+            <div class="grid-item" id="Internetkunskap">Vad är internet?
                 <img src="imagesvideos/pexels-pixabay-147413.jpg"/>
                 Start: VT-23.
                 <br>
                 15HP
             </div>
-            <div class="grid-item" id="ProgSpråk">Alla programmeringsspråk. 
+            <div class="grid-item" id="ProgSpråk">C#, Java, C++ och mycket mer. 
                 <img src="imagesvideos/pexels-markus-spiske-2004161.jpg"> 
                 Start: HT-22. 
                 <br>
@@ -60,62 +61,6 @@
                 Start: HT-22. 
                 <br>
                 7HP </div>
-        </div>
-            <!--
-            <button> Internetkunskap. Start: VT-23, 15HP </button>
-                <ul>
-                    <ul> 
-                        <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
-                    </ul>
-                </ul>
-            <button> Alla programmeringsspråk. Start: HT-22. 60HP. </button>
-            <ul>
-                <ul>
-                    <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
-                </ul>
-            </ul>
-            <button> AI - Prata med robotar. Start: HT-22. 15HP.</button>
-            <ul>
-                <ul>
-                    <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
-                </ul>
-            </ul>
-            <button> Cloud - Mer än fluffiga moln. Start: VT-23. 30HP. </button>
-            <ul>
-                <ul>
-                    <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
-                </ul>
-            </ul>
-            <button> Office 365, grundkurs. Start: VT-23, 7HP </button>
-            <ul>
-                <ul>
-                    <li> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
-                </ul>
-            </ul>
-        -->
         </div>
         <div class="footer">All rights reserved West Coast Education.</div>
     </div>
