hamburger menu not working but added

--- a/index.html
+++ b/index.html
@@ -13,16 +13,29 @@
                     <source src="imagesvideos/video.mp4" />
                 </video>
         <header>
-            <div class="flex-nav">
                 <div class="topnav">
-                    <a href="index.html">Startsida</a>
-                    <a href="kurser.html">Kurser</a>
-                    <a href="#">Eleverna berättar</a>
-                    <a href="#">Rektorn har ordet</a>
-                    <a href="#">Galleri</a>
-                    <a href="#">Logga in</a>
+                    <div class="menu-burger">
+                        <div class="menu-burger-btn">
+                            <ul>
+                                <li>
+                                    <a href="index.html">Startsida</a>
+                                </li>
+                                <li>
+                                    <a href="kurser.html">Kurser</a>
+                                </li>
+                                <li>
+                                    <a href="#">Rektorn har ordet</a>
+                                </li>
+                                <li>
+                                    <a href="#">Galleri</a>
+                                </li>
+                                <li>
+                                    <a href="#">Logga in/ Kundvagn</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-            </div>
         </header>      
         <div class="infoText">
             <h1>WestCoast Education </h1>
