typ nöjd med hamburgarmenyn, startsidan är lite off dock

--- a/index.html
+++ b/index.html
@@ -13,28 +13,16 @@
                     <source src="imagesvideos/video.mp4" />
                 </video>
         <header>
-                <div class="topnav">
-                    <div class="menu-burger">
-                        <div class="menu-burger-btn">
-                            <ul>
-                                <li>
-                                    <a href="index.html">Startsida</a>
-                                </li>
-                                <li>
-                                    <a href="kurser.html">Kurser</a>
-                                </li>
-                                <li>
-                                    <a href="#">Rektorn har ordet</a>
-                                </li>
-                                <li>
-                                    <a href="#">Galleri</a>
-                                </li>
-                                <li>
-                                    <a href="#">Logga in/ Kundvagn</a>
-                                </li>
-                            </ul>
-                        </div>
+                <div class="topnav"><a href="index.html">WestCoast Education</a>
+                    <div id="myLinks">
+                        <a href="kurser.html">Kurser</a>
+                        <a href="#">Rektorn har ordet</a>
+                        <a href="#">Galleri</a>
+                        <a href="#">Logga in/ Kundvagn</a>
                     </div>
+                    <a href="javascript:void(0);" class="icon" onclick="myBurgerMenu()">
+                        <i class="fa fa-bars"></i>
+                    </a>
                 </div>
         </header>      
         <div class="infoText">
@@ -64,5 +52,6 @@
         </div>
     </div>
     <div class="footer">All rights reserved West Coast Education.</div>
+    <script src="events.js"></script>
 </body>
 </html>
