--- a/kurser.html
+++ b/kurser.html
@@ -11,26 +11,27 @@
 <body>
     <div class="container">
         <header>
-                <div class="topnav">
-                    <a href="index.html" class="active">WestCoast Education</a>
+                <div class="topnav"><a href="index.html">WestCoast Education</a>
                     <div id="myLinks">
                         <a href="kurser.html">Kurser</a>
                         <a href="#">Rektorn har ordet</a>
                         <a href="#">Galleri</a>
                         <a href="#">Logga in/ Kundvagn</a>
                     </div>
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <a href="javascript:void(0);" class="icon" onclick="myBurgerMenu()">
                         <i class="fa fa-bars"></i>
                     </a>
                 </div>
             <img id="cabin" src="red-g59a8ffb41_1920.jpg" />
         </header>
         <div class="rubrik">
+            <p>
             Valbara kurser. 
             <br>
             Nedan ser du de kurser som går att läsa på vår skola. 
             <br>
             Klicka gärna in dig på någon utbildning eller kurs för att läsa mer om den. 
+            </p>
         </div>
         <div class="courses">
             <div class="grid-item" id="Internetkunskap">Vad är internet?
@@ -84,15 +85,6 @@
         </div>
         <div class="footer">All rights reserved West Coast Education.</div>
     </div>
-<script>
-    function myFunction() {
-        var x = document.getElementById("myLinks");
-        if (x.style.display === "block") {
-            x.style.display = "none";
-        } else {
-            x.style.display = "block";
-        }
-    }
-</script>
+<script src="events.js"></script>
 </body>
 </html>
