påbörjat kundvagn och adminsida

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <div id="myLinks">
                         <a href="kurser.html">Kurser</a>
                         <a href="#">Rektorn har ordet</a>
-                        <a href="#">Galleri</a>
-                        <a href="#">Logga in/ Kundvagn</a>
+                        <a href="admin.html">Admin</a>
+                        <a href="kundvagn.html">Logga in/ Kundvagn</a>
                     </div>
                     <a href="javascript:void(0);" class="icon" onclick="myBurgerMenu()">
                         <i class="fa fa-bars"></i>
