--- a/kurser.html
+++ b/kurser.html
@@ -15,8 +15,8 @@
                     <div id="myLinks">
                         <a href="kurser.html">Kurser</a>
                         <a href="#">Rektorn har ordet</a>
-                        <a href="#">Galleri</a>
-                        <a href="#">Logga in/ Kundvagn</a>
+                        <a href="admin.html">Admin</a>
+                        <a href="kundvagn.html">Logga in/ Kundvagn</a>
                     </div>
                     <a href="javascript:void(0);" class="icon" onclick="myBurgerMenu()">
                         <i class="fa fa-bars"></i>
@@ -30,7 +30,7 @@
             <br>
             Nedan ser du de kurser som går att läsa på vår skola. 
             <br>
-            Klicka gärna in dig på någon utbildning eller kurs för att läsa mer om den. 
+            Klicka på köp när du bestämt dig för en kurs och den läggs till i din kundvagn. 
             </p>
         </div>
         <div class="courses">
@@ -39,48 +39,79 @@
                 Start: VT-23.
                 <br>
                 15HP
+                <br>
+                1.4875SEK.
+                <br>
+                <span class="buy" onClick="buyInternet">Köp</span>
             </div>
             <div class="grid-item" id="ProgSpråk">C#, Java, C++ och mycket mer. 
                 <img src="imagesvideos/pexels-markus-spiske-2004161.jpg"> 
                 Start: HT-22. 
                 <br>
                 60HP. 
+                <br>
+                19.475SEK. 
+                <br>
+                <span class="buy" onClick="buyProgramming">Köp</span>
             </div>
             <div class="grid-item" id="AI">AI - <br> Prata med robotar. 
                 <img src="imagesvideos/pexels-alex-knight-2599244.jpg">
                 Start: HT-22. 
                 <br>
                 15HP. 
+                <br>
+                <br>
+                11.250SEK.
+                <span class="buy" onClick="buyRobots">Köp</span>
             </div>
             <div class="grid-item" id="Cloud">Cloud - <br> Mer än fluffiga moln. 
                 <img src="imagesvideos/pexels-brett-sayles-2100921.jpg">
                 Start: VT-23. 
                 <br>
                 30HP. 
+                <br>
+                22.725SEK.
+                <br>
+                <span class="buy" onClick="buyCloud">Köp</span>
             </div>
             <div class="grid-item" id="OfficePaketet">Office 365, grundkurs. 
                 <img src="imagesvideos/pexels-photo-574069.jpeg">
                 Start: VT-23,
                 <br>
-                 7HP 
+                 7HP<br>
+                1.475SEK.
+                <br>
+                <span class="buy" onClick="buyOffice">Köp</span>
                 </div>
             <div class="grid-item" id="Paint">Paint - <br> Din bästa vän. 
                 <img src="imagesvideos/pexels-deeana-arts-1576210.jpg">
                 Start: HT-22. 
                 <br>
                 7HP 
+                <br>
+                1.475SEK.
+                <br>
+                <span class="buy" onClick="buyPaint">Köp</span>
             </div>
             <div class="grid-item" id="OfficePaketet">Office 365, Advanced.
                 <img src="imagesvideos/pexels-photo-574069.jpeg">
                 Start: VT-23,
                 <br>
                 15HP
+                <br>
+                12.368SEK.
+                <br>
+                <span class="buy" onClick="buyPaintAdvanced">Köp</span>
             </div>
             <div class="grid-item" id="Paint">Paint - <br> Din bästa vän, Advanced.
                 <img src="imagesvideos/pexels-deeana-arts-1576210.jpg">
                 Start: HT-22.
                 <br>
                 15HP
+                <br>
+                10.205SEK.
+                <br>
+                <span class="buy">Köp</span>
             </div>
         </div>
         <div class="footer">All rights reserved West Coast Education.</div>
