--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
         </div>
     </div>
     <div class="footer">All rights reserved West Coast Education.</div>
-    <script src="events.js"></script>
+    <script src="scripts/events.js"></script>
 </body>
 </html>
