--- a/kundvagn.html
+++ b/kundvagn.html
@@ -26,10 +26,23 @@
             <h1>Din kundvagn.</h1>
             <p>
                 Kurser i din lista: 
-                <ul id="coursesInCart"></ul>
+                <ul id="coursesInCart">ewdfrhg</ul>
             </p>
+            <button id="openBtn" class="buyBtn">Köp</button>
+        </div>
+            <div id="modalContainer" class="modalContainer">
+                <div class="modal">
+                    <h1>Courses has been payed. </h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Eum neque assumenda ullam omnis et atque illo reiciendis nemo.
+                        Iusto libero possimus, corporis dolore animi
+                        officiis et consequatur voluptatum assumenda fuga.</p>
+                        <button id="closeBtn" class="closeBtn" >Close</button>
+                </div>
+            </div>
         </div>
         <div class="footer">All rights reserved West Coast Education.</div>
-        <script src="events.js"></script>
+    </div>
+    <script src="scripts/events.js"></script>
 </body>
 </html>
