--- a/kurser.html
+++ b/kurser.html
@@ -139,6 +139,6 @@
                 $('.alert').addClass("hide");
             });
     </script>
-<script src="events.js"></script>
+<script src="scripts/events.js"></script>
 </body>
 </html>
