flyttat om alla flikar till olika modal rutor, work in progress

--- a/kundvagn.html
+++ b/kundvagn.html
@@ -26,7 +26,8 @@
             <h1>Din kundvagn.</h1>
             <p>
                 Kurser i din lista: 
-                <ul id="coursesInCart">ewdfrhg</ul>
+                <ul id="coursesInCart"></ul>
+                ewdfrhg
             </p>
             <button id="openBtn" class="buyBtn">Köp</button>
         </div>
